--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.2.4",
+    "howler": "^2.2.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
